langkit/src/gpr_parser-analysis-c.ads


------------------------------------------------------------------------------
--                                                                          --
--                            GPR PROJECT PARSER                            --
--                                                                          --
--            Copyright (C) 2015-2016, Free Software Foundation, Inc.       --
--                                                                          --
-- This library is free software;  you can redistribute it and/or modify it --
-- under terms of the  GNU General Public License  as published by the Free --
-- Software  Foundation;  either version 3,  or (at your  option) any later --
-- version. This library is distributed in the hope that it will be useful, --
-- but WITHOUT ANY WARRANTY;  without even the implied warranty of MERCHAN- --
-- TABILITY or FITNESS FOR A PARTICULAR PURPOSE.                            --
--                                                                          --
-- As a special exception under Section 7 of GPL version 3, you are granted --
-- additional permissions described in the GCC Runtime Library Exception,   --
-- version 3.1, as published by the Free Software Foundation.               --
--                                                                          --
-- You should have received a copy of the GNU General Public License and    --
-- a copy of the GCC Runtime Library Exception along with this program;     --
-- see the files COPYING3 and COPYING.RUNTIME respectively.  If not, see    --
-- <http://www.gnu.org/licenses/>.                                          --
--                                                                          --
------------------------------------------------------------------------------

--  DO NOT EDIT THIS IS AN AUTOGENERATED FILE




with Ada.Exceptions;                  use Ada.Exceptions;
with Ada.Strings.Wide_Wide_Unbounded; use Ada.Strings.Wide_Wide_Unbounded;
with Ada.Unchecked_Conversion;

with System;

with Interfaces;           use Interfaces;
with Interfaces.C;         use Interfaces.C;
with Interfaces.C.Strings; use Interfaces.C.Strings;

with Langkit_Support.Slocs; use Langkit_Support.Slocs;
with Langkit_Support.Text;  use Langkit_Support.Text;

--  This package defines data types and subprograms to provide the
--  implementation of the exported C API for analysis primitives.
--
--  Unless one wants to deal with C code, it is very likely that one needs to
--  use this package. Please refer to the C header if you want to use the C
--  API.

package GPR_Parser.Analysis.C is

   type gpr_analysis_context is new System.Address;
   --  Context for all source analysis.

   type gpr_analysis_unit is new System.Address;
   --  Context for the analysis of a single compilation unit. References are
   --  ref-counted.

   type gpr_base_node is new System.Address;
   --  Data type for all AST nodes. AST nodes are assembled to make up a tree.
   --  See the AST node primitives below to inspect such trees. References are
   --  ref-counted.

   type gpr_node_kind_enum is new int;
   --  Kind of AST nodes in parse trees.

   type gpr_lexical_env is new System.Address;
   --  Data type for lexical environments.

   --  Helper data structures for source location handling

   type gpr_source_location is record
      Line   : Unsigned_32;
      Column : Unsigned_16;
   end record
     with Convention => C;

   type gpr_source_location_range is record
      Start_S, End_S : gpr_source_location;
   end record
     with Convention => C;

   type gpr_text is record
      Chars  : System.Address;
      --  Address for the content of the string.

      Length : size_t;
      --  Size of the string (in characters).

      Is_Allocated : int;
   end record
     with Convention => C_Pass_By_Copy;
   --  String encoded in UTF-32 (native endianness).

   type gpr_token is record
      Token_Data                : System.Address;
      Token_Index, Trivia_Index : int;

      Kind                      : int;
      Text                      : gpr_text;
      Sloc_Range                : gpr_source_location_range;
   end record
     with Convention => C_Pass_By_Copy;
   --  Reference to a token in an analysis unit.

   type gpr_diagnostic is record
      Sloc_Range : gpr_source_location_range;
      Message    : gpr_text;
      --  When the API returns a diagnostic, it is up to the caller to free the
      --  message string.
   end record
     with Convention => C;
   --  Analysis unit diagnostics.

   type gpr_exception is record
      Is_Fatal    : int;
      --  Whether this exception is fatal for this process. If it is fatal,
      --  then process sanity is no longer guaranteed by Libadalang. If it is
      --  not, performing further processing is safe.

      Information : chars_ptr;
      --  Message and context information associated with this exception.
   end record;
   --  Holder for native exceptions-related information.  Memory management for
   --  this and all the fields is handled by the library: one just has to make
   --  sure not to keep references to it.
   --
   --  TODO: For the moment, this structure contains already formatted
   --  information, but depending on possible future Ada runtime improvements,
   --  this might change.

   type gpr_bool is new Unsigned_8;

      type gpr_bool_Ptr is access gpr_bool;
      type gpr_base_node_Ptr is access gpr_base_node;
      type gpr_lexical_env_Ptr is access gpr_lexical_env;
      type gpr_token_Ptr is access gpr_token;
      type gpr_text_Ptr is access gpr_text;
      type gpr_source_location_Ptr is access gpr_source_location;
      type gpr_source_location_range_Ptr is access gpr_source_location_range;
      type gpr_diagnostic_Ptr is access gpr_diagnostic;
      type gpr_exception_Ptr is access gpr_exception;

   type int_Ptr is access int;

   procedure Free (Address : System.Address)
     with Export        => True,
          Convention    => C,
          External_Name => "gpr_free";
   --  Free dynamically allocated memory.
   --
   --  This is a helper to free objects from dynamic languages.
   --  Helper to free objects in dynamic languages

   procedure gpr_destroy_text (T : gpr_text_Ptr)
     with Export        => True,
          Convention    => C,
          External_Name => "gpr_destroy_text";
   --  If this text object owns the buffer it references, free this buffer.
   --
   --  Note that even though this accepts a pointer to a text object, it does
   --  not deallocates the text object itself but rather the buffer it
   --  references.

   -------------------------
   -- Analysis primitives --
   -------------------------

   function gpr_create_analysis_context
     (Charset : chars_ptr)
      return gpr_analysis_context
      with Export        => True,
           Convention    => C,
           External_name => "gpr_create_analysis_context";
   --  Create a new Analysis_Context. The returned value has a ref-count set to
   --  1. When done with it, invoke Destroy on it, in which case the ref-count
   --  is ignored. If this value is shared with garbage collected languages,
   --  use ref-counting primitives instead so that the context is destroyed
   --  when nobody references it anymore.
   --
   --  Charset will be used as a default charset to decode input sources in
   --  analysis units. Please see GNATCOLL.Iconv for a couple of supported
   --  charsets. Be careful: passing an unsupported charset here is not
   --  guaranteed to raise an error here.
   --
   --  If no charset is provided, take utf-8 as the default.
   --
   --  TODO: Passing an unsupported charset here is not guaranteed to raise an
   --  error right here, but this would be really helpful for users.

   function gpr_context_incref
     (Context : gpr_analysis_context)
      return gpr_analysis_context
      with Export        => True,
           Convention    => C,
           External_name => "gpr_context_incref";
   --  Increase the reference count to an analysis context. Useful for bindings
   --  to garbage collected languages. Return the reference for convenience.

   procedure gpr_context_decref
     (Context : gpr_analysis_context)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_context_decref";
   --  Decrease the reference count to an analysis context. Useful for bindings
   --  to garbage collected languages. Destruction happens when the ref-count
   --  reaches 0.

   procedure gpr_destroy_analysis_context
     (Context : gpr_analysis_context)
      with Export        => True,
           Convention    => C,
           External_name => "gpr_destroy_analysis_context";
   --  Invoke Remove on all the units Context contains and free Context. Thus,
   --  any analysis unit it contains may survive if there are still references
   --  to it elsewhere.

   function gpr_get_analysis_unit_from_file
     (Context           : gpr_analysis_context;
      Filename, Charset : chars_ptr;
      Reparse           : int;
      With_Trivia       : int)
      return gpr_analysis_unit
      with Export        => True,
           Convention    => C,
           External_name =>
              "gpr_get_analysis_unit_from_file";
   --  Create a new analysis unit for Filename or return the existing one if
   --  any. If Reparse is true and the analysis unit already exists, reparse it
   --  from Filename.
   --
   --  The result is owned by the context: the caller must increase its ref-
   --  count in order to keep a reference to it.
   --
   --  Use Charset in order to decode the content of Filename. If Charset is
   --  empty then use the last charset used for this unit, or use the context's
   --  default if creating this unit.
   --
   --  If any failure occurs, such as file opening, decoding, lexing or parsing
   --  failure, return an analysis unit anyway: errors are described as
   --  diagnostics.
   --
   --  When With_Trivia is true, the parsed analysis unit will contain trivias.
   --  Already existing analysis units are reparsed if needed.

   function gpr_get_analysis_unit_from_buffer
     (Context           : gpr_analysis_context;
      Filename, Charset : chars_ptr;
      Buffer            : chars_ptr;
      Buffer_Size       : size_t;
      With_Trivia       : int)
      return gpr_analysis_unit
      with Export        => True,
           Convention    => C,
           External_name =>
              "gpr_get_analysis_unit_from_buffer";
   --  Create a new analysis unit for Filename or return the existing one if
   --  any. Whether the analysis unit already exists or not, (re)parse it from
   --  the source code in Buffer.
   --
   --  The result is owned by the context: the caller must increase its ref-
   --  count in order to keep a reference to it.
   --
   --  Use Charset in order to decode the content of Filename. If Charset is
   --  empty then use the last charset used for this unit, or use the context's
   --  default if creating this unit.
   --
   --  If any failure occurs, such as decoding, lexing or parsing failure,
   --  return an analysis unit anyway: errors are described as diagnostics.
   --
   --  When With_Trivia is true, the parsed analysis unit will contain trivias.
   --  Already existing analysis units are reparsed if needed.

   function gpr_remove_analysis_unit
     (Context  : gpr_analysis_context;
      Filename : chars_ptr) return int
      with Export        => True,
           Convention    => C,
           External_name => "gpr_remove_analysis_unit";
   --  Remove the corresponding analysis unit from this context. If someone
   --  still owns a reference to it, it remains available but becomes context-
   --  less.
   --
   --  Return whether the removal was successful (i.e. whether the analysis
   --  unit existed).
